responsive cards and text overflow fixed!

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -44,7 +44,7 @@
 
 .card-product img {
   height: 100%;
-  width: 120px;
+  min-width: 120px;
   object-fit: cover;
 }
 
@@ -53,6 +53,11 @@
   font-weight: bold;
   margin-bottom: 10px;
   color: black;
+  max-height: 50px;
+  max-width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: block;
 }
 
 .card-product ul {
@@ -63,6 +68,15 @@
   margin-bottom: 0;
 }
 
+.card-product li {
+  max-height: 50px;
+  max-width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: block;
+}
+
 .card-product .card-product-infos {
   padding: 18px;
+  width: 100%;
 }
